@@ -9,6 +9,8 @@ xx Aug 2008: 0.6.2 Miek <miek@miek.nl>
    block devices. The rdup-utils IGNORE these files.
    This overloads the size (%s) in case of block/character
    devices - then it is major,minor number
+ * rdup: always write the device out with 5 position. This could
+   also have resulted in too large incrementals
  * rdup-utils: check if a file is encrypted/compressed before
    decrypting/decompressing it
 
